Refactor asciidoctor-maven-plugin